css/frm_admin.css
/* ... */
.frm_form_action_settings .frm_logic_row p {
	margin-top: 0;
	margin-bottom: 0;
	padding: 0;
}

.frm_form_settings input[type="text"] {
	line-height: normal;
	height: auto;
}

#poststuff .widgets-holder-wrap .frm_form_action_settings .widget-inside {
	padding-bottom: 0;
}

#poststuff .frm_form_settings .widgets-holder-wrap .widget-inside {
	padding-left: 15px;
	padding-right: 15px;
}

#form_global_settings h3 {
	font-size: 14px;
	margin-top: 25px;
}

#form_global_settings .tabs-panel + h3 {
	margin-top: 0;
	border: none;
}

#poststuff .frm_form_settings .widget-inside h3,
#poststuff .frm_form_settings .advanced_settings h3,
#poststuff .frm_settings_form h3,
#frm_advanced .inside h3 {
	border-top: 1px solid #eee;
	border-bottom: none;
	margin: 15px -15px 0;
	padding: 8px 15px;
	font-size: 14px;
}

#poststuff .frm_form_settings h3.frm_first_h3,
#poststuff h3.frm_first_h3 {
	border: none;
	margin-top: 0;
}

h3.frm_add_logic_link {
	margin-bottom: 0 !important;
}

a.frm_add_logic_link {
	display: block;
	text-align: center;
	margin: 10px auto;
	padding: 10px;
	width: 80%;
	max-width: 290px;
	font-size: 19px;
	border: 1px solid var(--primary-color);
	border-radius: var(--border-radius);
}

a.frm_add_logic_link.frm_hidden {
	display: none;
}

.frm_add_logic_link .frmsvg,
.frm_add_logic_link i {
	margin-right: 5px;
}

.frm_right_addon {
	position: relative;
}

.frm_right_addon .frm_remove_field {
	position: absolute;
	padding: 5px 10px;
	right: 10px;
	bottom: 0;
}

.frm_right_addon input {
	padding-right: 30px;
}

.frm_icon_font {
	color: #A0A0A0;
	color: var(--grey);
}

.misc-pub-revisions.frm_icon_font,
.misc-pub-revisions.frm_icon_font:hover {
	color: inherit;
}

.postbox.frm_with_icons .inside {
	padding: 0;
	margin: 0;
}

.frm_add_tag:before {
	content: '\e602';
}

.frm_remove_tag:before {
	content: '\e600';
}

.frm_logic_row .frm_remove_tag {
	padding-left: 7px;
}

.frm_logic_row .frm1 > .frm_remove_tag {
	padding: 0;
}

.frm_tooltip_icon:before {
	font-size: 13px;
	vertical-align: top;
}

.form-field input[type=text].frm_other_input {
	width: 30%;
	margin-left: 10px;
}

.frm_action_icon {
	margin: 5px 0 0 5px;
}

span.frm_action_icon {
	margin: 0 4px 0 0;
}

.frm_action_icon:active {
	outline: none;
}

a.frm_action_icon:hover {
	text-decoration: none;
}

.frm_action_icon.frm_error_icon:before {
	content: '\e608';
}

.frm_inactive_icon.frm_action_icon.frm_error_icon:before {
	content: '\e606';
}

.frm-field-action-icons a {
	margin-left: 15px;
	float: right;
	color: var(--primary-hover) !important;
	font-size: 17px;
	width: 17px;
}

.frm-field-action-icons a .frmsvg {
	font-size: 17px;
	width: 17px;
	height: 17px;
}

.edit_field_type_end_divider .frm-field-action-icons {
	display: none !important;
}

.frm-move {
	cursor: move;
}

span.howto {
	display: inline;
}

.frm_import_message {
	margin: 15px 0;
	line-height: 2.5em;
}

.frm_sorting .form-field .widget input[type="text"],
.frm_sorting .form-field .widget input[type="number"],
.frm_sorting .form-field .widget select,
#wpcontent .frm_sorting .form-field .widget select,
.frm_sorting .form-field .widget textarea {
	width: auto;
}

.tagchecklist span.no_taglist {
	display: inline;
	float: none;
	line-height: 15px;
	margin-right: 0;
	font-size: inherit;
}

.tagchecklist .frm_exclude_cat_list span {
	display: inline;
}

.tagchecklist span a:before {
	line-height: 23px;
	text-align: start;
}

/* Entries Page */
.frm_no_entries_form {
	padding: 60px 0;
}

.frm_no_entries_form .frm_no_entries_header {
	font-size: 20px;
	margin-bottom: 10px;
}

.frm_no_entries_form .frm_no_entries_text {
	line-height: 200%;
}

/* Reports Page */
#form_reports_page img.frm_no_reports {
	max-width: 100%;
}

.frm_wrap .google-visualization-table .gradient,
.frm_wrap .google-visualization-table-tr-head,
.frm_wrap .google-visualization-table-tr-odd,
.frm_wrap .google-visualization-table-tr-odd.google-visualization-table-tr-over {
	background: var(--lightest-grey);
}

.frm_wrap .google-visualization-table-tr-over {
	background: #fff;
}

.frm_wrap .google-visualization-table-table th,
.frm_wrap .google-visualization-table-table td {
	border-right-width: 0;
	padding: 10px !important;
}

.frm_wrap .google-visualization-table-tr-head,
.frm_wrap .google-visualization-table-tr-head th {
	font-size: 16px;
	font-weight: 400 !important;
	text-align: left;
}

.frm_wrap .google-visualization-table-td-number {
	text-align: inherit;
}

#form_reports_page .postbox{
	text-align: center;
	float: none;
	display: inline-block;
	margin-right: 2%;
	width: 20%;
	min-width: 175px;
}

#form_reports_page h2 {
	margin-top: 2em !important;
}

/* Views Page */
#form_views_page img.frm_no_views {
	max-width: 100%;
}

/* Field options popup */
.frm_field_opts_popup {
	min-width: 300px;
	background-color: #fff;
}

.frm_field_opts_popup #wpadminbar {
	display: none;
}

.frm_prepop {
	width: 100%;
	list-style: none;
	overflow: auto;
	margin: 0;
	max-height: 295px;
}

.frm_prepop li {
	margin: 0;
}

.frm_prepop li a {
	display: block;
	text-decoration: none;
	cursor: pointer;
	padding: 5px 20px;
}

.frm_prepop li a:hover {
	background: var(--sidebar-color);
}

/* */
#frm_form_editor_container #frm_form_key_box {
	width: 13em;
	max-width: 30%
}

#frm_form_editor_container #frm_form_desc {
	width: 70%;
}

#frm_form_editor_container .ui-widget-content {
	display: none;
	padding: 15px;
}

#frm_form_editor_container .ui-widget-content label {
	float: left;
	width: 170px;
	text-align: right;
	padding-right: 5px;
	clear: both;
}

#frm_form_editor_container .ui-widget-content label.nofloat {
	clear: none;
	float: none;
	margin-left: 10px;
}

#frm_form_editor_container .ui-state-default {
	color: #333 !important;
}

#frm_form_editor_container .ui-state-default a.frm_orange, .frm-right-panel a.frm_orange, #postbox-container-1 a.frm_orange {
	color: #D54E21;
}

#styling_settings input[type=checkbox], #styling_settings input[type=radio] {
	border: solid 1px #bbb;
}
/* ... */

